oscen-macros/tests/ui/turbofish_non_frame.stderr
error: turbofish arguments are only supported on the `Frame` constructor
  --> tests/ui/turbofish_non_frame.rs:13:21
   |
13 |         dsp::split::<4>(osc.output) -> out;
   |                     ^

warning: unused import: `PolyBlepOscillator`
 --> tests/ui/turbofish_non_frame.rs:1:20
  |
1 | use oscen::{graph, PolyBlepOscillator};
  |                    ^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
